--- a/html/变量、作用域和内存问题/作用域.html
+++ b/html/变量、作用域和内存问题/作用域.html
@@ -40,9 +40,9 @@
 		//类型检测
 		var s = "Jabo";
 		var a = ['1','2'];
-		console.log(typeof s);
-		console.log(typeof a);
-		console.log(a instanceof Array);
+		console.log(typeof s);						
+		console.log(typeof a);            //object
+		console.log(a instanceof Array);  //true
 
 
 
