--- a/html/Array/concat、slice.html
+++ b/html/Array/concat、slice.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>concat、slice</title>
+	 <link rel="stylesheet" type="text/css" href="../../css/base.css">
 </head>
 <body>
 
