--- a/html/Array/sort.html
+++ b/html/Array/sort.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>sort</title>
+	 <link rel="stylesheet" type="text/css" href="../../css/base.css">
 </head>
 <body>
 	<div class="box">
